--- a/alembic.ini
+++ b/alembic.ini
@@ -55,7 +55,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:Viethoaken321@localhost:5432/fastapi2023
+sqlalchemy.url = 
 
 
 [post_write_hooks]
