--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v3
-      - name: Install python version 3.9
+      - name: Install python version 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: "3.9"
+          python-version: "3.10"
       - name: update pip
         run: python -m pip install --upgrade pip
       - name: install all dependencies
@@ -29,6 +29,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
