--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,6 +4,8 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    environment:
+      name: testing
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
