--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -48,7 +48,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-
+    environment:
+      name: production
     steps:
       - name: deploy something
-      - run: echo "going deploy somthing"
+        uses: echo "going first step CD"
+      # - name: pulling git repo
+      #   uses: actions/checkout@v2
