--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -52,6 +52,6 @@ jobs:
       name: production
     steps:
       - name: deploy something
-        uses: echo "going first step CD"
+        run: echo "going first step CD"
       # - name: pulling git repo
       #   uses: actions/checkout@v2
